<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1oG-Bp-HQP">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Previous Shifts-->
        <scene sceneID="NFg-Oo-y2w">
            <objects>
                <viewController id="TtC-2y-paD" customClass="PreviousShiftsViewController" customModule="ShiftTracker" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="G9e-zq-0ra">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fs7-mJ-ySf">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ShiftRecordTableViewCell" id="LVa-eI-H8k">
                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LVa-eI-H8k" id="RW3-IY-UmC">
                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                        </tableViewCellContentView>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="TtC-2y-paD" id="qGP-i6-KHP"/>
                                    <outlet property="delegate" destination="TtC-2y-paD" id="JMr-i7-UoW"/>
                                </connections>
                            </tableView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="LHF-Ty-By2"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="fs7-mJ-ySf" firstAttribute="leading" secondItem="G9e-zq-0ra" secondAttribute="leading" id="DLR-Rb-mMf"/>
                            <constraint firstAttribute="trailing" secondItem="fs7-mJ-ySf" secondAttribute="trailing" id="OUJ-dA-cv3"/>
                            <constraint firstItem="fs7-mJ-ySf" firstAttribute="top" secondItem="G9e-zq-0ra" secondAttribute="top" id="gPz-lh-tb3"/>
                            <constraint firstItem="fs7-mJ-ySf" firstAttribute="bottom" secondItem="LHF-Ty-By2" secondAttribute="bottom" id="rwm-mE-MXN"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Previous Shifts" image="list.bullet" catalog="system" id="6ay-Ql-oet"/>
                    <connections>
                        <outlet property="tableView" destination="fs7-mJ-ySf" id="2Eg-CD-d1E"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="sTw-Nn-GQK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-162" y="423"/>
        </scene>
        <!--Shift Track-->
        <scene sceneID="6La-dz-W7y">
            <objects>
                <viewController id="JgJ-eu-r6P" customClass="ShiftTrackViewController" customModule="ShiftTracker" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="TdJ-lE-Iv5">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="Sdp-TZ-TAJ">
                                <rect key="frame" x="50" y="124" width="314" height="135"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="Z6f-Hv-Img">
                                        <rect key="frame" x="0.0" y="0.0" width="314" height="50"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="17N-fU-MDb">
                                                <rect key="frame" x="0.0" y="0.0" width="137" height="50"/>
                                                <color key="backgroundColor" red="0.0" green="0.76769225840286348" blue="0.78233898346032993" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="TD5-wm-BJ9"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <state key="normal" title="Shift Start"/>
                                                <connections>
                                                    <action selector="shiftStartButtonPressed:" destination="JgJ-eu-r6P" eventType="touchUpInside" id="aa4-Ha-7jU"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pyS-Y7-lNp">
                                                <rect key="frame" x="177" y="0.0" width="137" height="50"/>
                                                <color key="backgroundColor" red="0.0" green="0.76769225839999999" blue="0.78233898349999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="22"/>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <state key="normal" title="Shift End"/>
                                                <connections>
                                                    <action selector="shiftEndButtonPressed:" destination="JgJ-eu-r6P" eventType="touchUpInside" id="M9e-2P-ahs"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zWp-wL-kFf" customClass="MagicTimerView" customModule="MagicTimer">
                                        <rect key="frame" x="57" y="85" width="200" height="50"/>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="fontSize">
                                                <real key="value" value="18"/>
                                            </userDefinedRuntimeAttribute>
                                            <userDefinedRuntimeAttribute type="color" keyPath="textColor">
                                                <color key="value" red="0.0" green="0.76769225839999999" blue="0.78233898349999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            </userDefinedRuntimeAttribute>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                <real key="value" value="15"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                    </view>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="Z6f-Hv-Img" firstAttribute="leading" secondItem="Sdp-TZ-TAJ" secondAttribute="leading" id="xYd-ZT-Ob5"/>
                                </constraints>
                            </stackView>
                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="bva-gM-jfd">
                                <rect key="frame" x="50" y="289" width="314" height="504"/>
                            </mapView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="140-Sx-vgw"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="Sdp-TZ-TAJ" firstAttribute="top" secondItem="140-Sx-vgw" secondAttribute="top" constant="80" id="4dH-g8-biS"/>
                            <constraint firstItem="Sdp-TZ-TAJ" firstAttribute="leading" secondItem="140-Sx-vgw" secondAttribute="leading" constant="50" id="6e3-6D-JrT"/>
                            <constraint firstItem="bva-gM-jfd" firstAttribute="top" secondItem="Sdp-TZ-TAJ" secondAttribute="bottom" constant="30" id="7Ej-4t-L46"/>
                            <constraint firstItem="Sdp-TZ-TAJ" firstAttribute="centerX" secondItem="TdJ-lE-Iv5" secondAttribute="centerX" id="EUM-iX-Y54"/>
                            <constraint firstItem="140-Sx-vgw" firstAttribute="trailing" secondItem="Sdp-TZ-TAJ" secondAttribute="trailing" constant="50" id="RaA-4D-zax"/>
                            <constraint firstItem="bva-gM-jfd" firstAttribute="leading" secondItem="140-Sx-vgw" secondAttribute="leading" constant="50" id="geZ-Ap-HNe"/>
                            <constraint firstItem="bva-gM-jfd" firstAttribute="bottom" secondItem="140-Sx-vgw" secondAttribute="bottom" constant="-20" id="o9P-Vf-Yv4"/>
                            <constraint firstItem="140-Sx-vgw" firstAttribute="trailing" secondItem="bva-gM-jfd" secondAttribute="trailing" constant="50" id="s9q-Kr-rLs"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Shift Track" image="hourglass.badge.plus" catalog="system" id="inS-9c-HRQ"/>
                    <connections>
                        <outlet property="mapView" destination="bva-gM-jfd" id="Z5L-LL-Pwr"/>
                        <outlet property="shiftEndButton" destination="pyS-Y7-lNp" id="QFs-po-afv"/>
                        <outlet property="shiftStarButton" destination="17N-fU-MDb" id="PY3-hL-MAJ"/>
                        <outlet property="timer" destination="zWp-wL-kFf" id="R33-u1-DVn"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="JJt-A9-fz9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-162.31884057971016" y="-272.54464285714283"/>
        </scene>
        <!--Tab Bar Controller-->
        <scene sceneID="L70-BC-J3y">
            <objects>
                <tabBarController id="1oG-Bp-HQP" sceneMemberID="viewController">
                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gYX-3V-BaD">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </tabBar>
                    <connections>
                        <segue destination="JgJ-eu-r6P" kind="relationship" relationship="viewControllers" id="f1k-4e-d6a"/>
                        <segue destination="TtC-2y-paD" kind="relationship" relationship="viewControllers" id="rap-B2-WnB"/>
                    </connections>
                </tabBarController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="HwN-jU-aIv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1051" y="32"/>
        </scene>
    </scenes>
    <resources>
        <image name="hourglass.badge.plus" catalog="system" width="106" height="128"/>
        <image name="list.bullet" catalog="system" width="128" height="88"/>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
