//
//  ShiftTrackerUITests.swift
//  ShiftTrackerUITests
//
//  Created by Runa Alam on 18/3/21.
//

import XCTest

class ShiftTrackerUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    //Test for running the whole app
    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        app.buttons["Shift Start"].tap()
        sleep(20)
        app.buttons["Shift End"].tap()
        let tabBarsQuery = XCUIApplication().tabBars
        tabBarsQuery.buttons["Previous Shifts"].tap()
        sleep(10)
        let tablesQuery = app.tables.cells
        tablesQuery.element(boundBy: 0).swipeUp()
        sleep(2)
        tabBarsQuery.buttons["Shift Track"].tap()
        sleep(5)
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
